--- a/models/processing/USA/County_Based/Air Quality.ipynb
+++ b/models/processing/USA/County_Based/Air Quality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4  1009 -86.567246  33.977448"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        " 'FIPS']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "4     NaN  NaN      NaN  53063  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -539,8 +539,6 @@
        "      <th>01/09/20</th>\n",
        "      <th>01/10/20</th>\n",
        "      <th>...</th>\n",
-       "      <th>03/23/20</th>\n",
-       "      <th>03/24/20</th>\n",
        "      <th>03/25/20</th>\n",
        "      <th>03/26/20</th>\n",
        "      <th>03/27/20</th>\n",
@@ -548,7 +546,9 @@
        "      <th>03/29/20</th>\n",
        "      <th>03/30/20</th>\n",
        "      <th>03/31/20</th>\n",
-       "      <th>04/09/20</th>\n",
+       "      <th>04/10/20</th>\n",
+       "      <th>04/11/20</th>\n",
+       "      <th>04/12/20</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FIPS</th>\n",
@@ -589,8 +589,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>18.00000</td>\n",
-       "      <td>25.75000</td>\n",
        "      <td>29.68750</td>\n",
        "      <td>29.3750</td>\n",
        "      <td>30.9375</td>\n",
@@ -598,7 +596,9 @@
        "      <td>29.62500</td>\n",
        "      <td>35.1875</td>\n",
        "      <td>29.56250</td>\n",
-       "      <td>24.50000</td>\n",
+       "      <td>29.87500</td>\n",
+       "      <td>34.93750</td>\n",
+       "      <td>33.454545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1051</th>\n",
@@ -613,8 +613,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>12.31250</td>\n",
-       "      <td>14.68750</td>\n",
        "      <td>26.06250</td>\n",
        "      <td>20.5000</td>\n",
        "      <td>20.3750</td>\n",
@@ -622,7 +620,9 @@
        "      <td>27.06250</td>\n",
        "      <td>20.1250</td>\n",
        "      <td>19.37500</td>\n",
-       "      <td>17.25000</td>\n",
+       "      <td>35.93750</td>\n",
+       "      <td>22.75000</td>\n",
+       "      <td>17.909091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1055</th>\n",
@@ -637,8 +637,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>12.68750</td>\n",
-       "      <td>12.31250</td>\n",
        "      <td>27.81250</td>\n",
        "      <td>19.8125</td>\n",
        "      <td>28.6875</td>\n",
@@ -646,7 +644,9 @@
        "      <td>32.18750</td>\n",
        "      <td>36.5000</td>\n",
        "      <td>33.68750</td>\n",
-       "      <td>29.43750</td>\n",
+       "      <td>41.81250</td>\n",
+       "      <td>25.81250</td>\n",
+       "      <td>21.909091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1073</th>\n",
@@ -661,8 +661,6 @@
        "      <td>34.5</td>\n",
        "      <td>32.375</td>\n",
        "      <td>...</td>\n",
-       "      <td>16.97500</td>\n",
-       "      <td>19.06250</td>\n",
        "      <td>26.30000</td>\n",
        "      <td>27.8375</td>\n",
        "      <td>38.5000</td>\n",
@@ -670,7 +668,9 @@
        "      <td>35.41250</td>\n",
        "      <td>32.8375</td>\n",
        "      <td>31.46250</td>\n",
-       "      <td>29.55000</td>\n",
+       "      <td>38.50000</td>\n",
+       "      <td>30.00000</td>\n",
+       "      <td>30.890909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1089</th>\n",
@@ -685,8 +685,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>18.84375</td>\n",
-       "      <td>17.53125</td>\n",
        "      <td>25.15625</td>\n",
        "      <td>21.5625</td>\n",
        "      <td>38.5000</td>\n",
@@ -694,11 +692,13 @@
        "      <td>36.15625</td>\n",
        "      <td>30.5000</td>\n",
        "      <td>33.65625</td>\n",
-       "      <td>34.09375</td>\n",
+       "      <td>38.40625</td>\n",
+       "      <td>27.21875</td>\n",
+       "      <td>35.590909</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 92 columns</p>\n",
+       "<p>5 rows × 94 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -710,34 +710,34 @@
        "1073         19.625      25.0   16.4375   30.6875     18.75       9.2   \n",
        "1089            NaN       NaN       NaN       NaN       NaN       NaN   \n",
        "\n",
-       "ValidDate  01/07/20  01/08/20  01/09/20  01/10/20  ...  03/23/20  03/24/20  \\\n",
+       "ValidDate  01/07/20  01/08/20  01/09/20  01/10/20  ...  03/25/20  03/26/20  \\\n",
        "FIPS                                               ...                       \n",
-       "1003            NaN       NaN       NaN       NaN  ...  18.00000  25.75000   \n",
-       "1051            NaN       NaN       NaN       NaN  ...  12.31250  14.68750   \n",
-       "1055            NaN       NaN       NaN       NaN  ...  12.68750  12.31250   \n",
-       "1073            NaN       NaN      34.5    32.375  ...  16.97500  19.06250   \n",
-       "1089            NaN       NaN       NaN       NaN  ...  18.84375  17.53125   \n",
+       "1003            NaN       NaN       NaN       NaN  ...  29.68750   29.3750   \n",
+       "1051            NaN       NaN       NaN       NaN  ...  26.06250   20.5000   \n",
+       "1055            NaN       NaN       NaN       NaN  ...  27.81250   19.8125   \n",
+       "1073            NaN       NaN      34.5    32.375  ...  26.30000   27.8375   \n",
+       "1089            NaN       NaN       NaN       NaN  ...  25.15625   21.5625   \n",
        "\n",
-       "ValidDate  03/25/20  03/26/20  03/27/20  03/28/20  03/29/20  03/30/20  \\\n",
+       "ValidDate  03/27/20  03/28/20  03/29/20  03/30/20  03/31/20  04/10/20  \\\n",
        "FIPS                                                                    \n",
-       "1003       29.68750   29.3750   30.9375   28.1875  29.62500   35.1875   \n",
-       "1051       26.06250   20.5000   20.3750   19.4375  27.06250   20.1250   \n",
-       "1055       27.81250   19.8125   28.6875   23.2500  32.18750   36.5000   \n",
-       "1073       26.30000   27.8375   38.5000   28.3000  35.41250   32.8375   \n",
-       "1089       25.15625   21.5625   38.5000   29.6875  36.15625   30.5000   \n",
+       "1003        30.9375   28.1875  29.62500   35.1875  29.56250  29.87500   \n",
+       "1051        20.3750   19.4375  27.06250   20.1250  19.37500  35.93750   \n",
+       "1055        28.6875   23.2500  32.18750   36.5000  33.68750  41.81250   \n",
+       "1073        38.5000   28.3000  35.41250   32.8375  31.46250  38.50000   \n",
+       "1089        38.5000   29.6875  36.15625   30.5000  33.65625  38.40625   \n",
        "\n",
-       "ValidDate  03/31/20  04/09/20  \n",
-       "FIPS                           \n",
-       "1003       29.56250  24.50000  \n",
-       "1051       19.37500  17.25000  \n",
-       "1055       33.68750  29.43750  \n",
-       "1073       31.46250  29.55000  \n",
-       "1089       33.65625  34.09375  \n",
+       "ValidDate  04/11/20   04/12/20  \n",
+       "FIPS                            \n",
+       "1003       34.93750  33.454545  \n",
+       "1051       22.75000  17.909091  \n",
+       "1055       25.81250  21.909091  \n",
+       "1073       30.00000  30.890909  \n",
+       "1089       27.21875  35.590909  \n",
        "\n",
-       "[5 rows x 92 columns]"
+       "[5 rows x 94 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -783,8 +783,6 @@
        "      <th>01/09/20</th>\n",
        "      <th>01/10/20</th>\n",
        "      <th>...</th>\n",
-       "      <th>03/23/20</th>\n",
-       "      <th>03/24/20</th>\n",
        "      <th>03/25/20</th>\n",
        "      <th>03/26/20</th>\n",
        "      <th>03/27/20</th>\n",
@@ -792,7 +790,9 @@
        "      <th>03/29/20</th>\n",
        "      <th>03/30/20</th>\n",
        "      <th>03/31/20</th>\n",
-       "      <th>04/09/20</th>\n",
+       "      <th>04/10/20</th>\n",
+       "      <th>04/11/20</th>\n",
+       "      <th>04/12/20</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FIPS</th>\n",
@@ -857,7 +857,6 @@
        "      <td>0.933333</td>\n",
        "      <td>0.923077</td>\n",
        "      <td>...</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -865,6 +864,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -929,7 +929,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>1000.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -939,10 +938,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 89 columns</p>\n",
+       "<p>5 rows × 91 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -954,34 +954,34 @@
        "1117       0.428571  0.583333  0.133333       0.0  0.066667  0.285714   \n",
        "2020            NaN       NaN       NaN       NaN       NaN       NaN   \n",
        "\n",
-       "ValidDate  01/07/20  01/08/20  01/09/20  01/10/20  ...  03/23/20  03/24/20  \\\n",
+       "ValidDate  01/07/20  01/08/20  01/09/20  01/10/20  ...  03/25/20  03/26/20  \\\n",
        "FIPS                                               ...                       \n",
        "1073            NaN       NaN       NaN       NaN  ...       NaN       NaN   \n",
-       "1097            1.0  0.272727  0.933333  0.923077  ...       3.0       NaN   \n",
+       "1097            1.0  0.272727  0.933333  0.923077  ...       NaN       NaN   \n",
        "1103            NaN       NaN       NaN       NaN  ...       NaN       NaN   \n",
        "1117            0.0  7.153846  1.733333  0.000000  ...       NaN       NaN   \n",
-       "2020            NaN       NaN       NaN       NaN  ...    1000.0       NaN   \n",
+       "2020            NaN       NaN       NaN       NaN  ...       NaN       NaN   \n",
        "\n",
-       "ValidDate  03/25/20  03/26/20  03/27/20  03/28/20  03/29/20  03/30/20  \\\n",
+       "ValidDate  03/27/20  03/28/20  03/29/20  03/30/20  03/31/20  04/10/20  \\\n",
        "FIPS                                                                    \n",
        "1073            NaN       NaN       NaN       NaN       NaN       NaN   \n",
-       "1097            NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "1097            NaN       NaN       NaN       NaN       NaN       1.0   \n",
        "1103            NaN       NaN       NaN       NaN       NaN       NaN   \n",
        "1117            NaN       NaN       NaN       NaN       NaN       NaN   \n",
        "2020            NaN       NaN       NaN       NaN       NaN       NaN   \n",
        "\n",
-       "ValidDate  03/31/20  04/09/20  \n",
+       "ValidDate  04/11/20  04/12/20  \n",
        "FIPS                           \n",
        "1073            NaN       NaN  \n",
        "1097            NaN       NaN  \n",
        "1103            NaN       NaN  \n",
        "1117            NaN       NaN  \n",
-       "2020            NaN       NaN  \n",
+       "2020            NaN     100.0  \n",
        "\n",
-       "[5 rows x 89 columns]"
+       "[5 rows x 91 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
