--- a/models/Submissions/Submission_Creator_v2.ipynb
+++ b/models/Submissions/Submission_Creator_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,6 @@
     "\n",
     "# gets next day, needed because the current day could be the last of the month\n",
     "def next_day(current_day):\n",
-    "    print(current_day.month)\n",
-    "    print(current_day.day)\n",
     "    # assumes that everything is in 2020\n",
     "    if current_day.day < maxMonth[current_day.month]:\n",
     "        return datetime.datetime(2020, current_day.month, current_day.day + 1)\n",
@@ -41,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +70,9 @@
     "            break\n",
     "    if start_index == -1: # start doesn't exist in dates\n",
     "        raise Exception(\"start date not present\")\n",
-    "    dates[start_index:]\n",
-    "    death_errors[start_index:]\n",
+    "        \n",
+    "    dates = dates[start_index:]\n",
+    "    death_errors = death_errors[start_index:]\n",
     "    \n",
     "    # convert dates from datetime to string, add fips code\n",
     "    for i in range(len(dates)):\n",
@@ -91,112 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "21\n",
-      "4\n",
-      "22\n",
-      "4\n",
-      "23\n",
-      "4\n",
-      "24\n",
-      "4\n",
-      "25\n",
-      "4\n",
-      "26\n",
-      "4\n",
-      "27\n",
-      "4\n",
-      "28\n",
-      "4\n",
-      "29\n",
-      "4\n",
-      "30\n",
-      "5\n",
-      "1\n",
-      "5\n",
-      "2\n",
-      "5\n",
-      "3\n",
-      "5\n",
-      "4\n",
-      "5\n",
-      "5\n",
-      "5\n",
-      "6\n",
-      "5\n",
-      "7\n",
-      "5\n",
-      "8\n",
-      "5\n",
-      "9\n",
-      "5\n",
-      "10\n",
-      "5\n",
-      "11\n",
-      "5\n",
-      "12\n",
-      "5\n",
-      "13\n",
-      "5\n",
-      "14\n",
-      "5\n",
-      "15\n",
-      "5\n",
-      "16\n",
-      "5\n",
-      "17\n",
-      "5\n",
-      "18\n",
-      "5\n",
-      "19\n",
-      "5\n",
-      "20\n",
-      "5\n",
-      "21\n",
-      "5\n",
-      "22\n",
-      "5\n",
-      "23\n",
-      "5\n",
-      "24\n",
-      "5\n",
-      "25\n",
-      "5\n",
-      "26\n",
-      "5\n",
-      "27\n",
-      "5\n",
-      "28\n",
-      "5\n",
-      "29\n",
-      "5\n",
-      "30\n",
-      "5\n",
       "31\n",
-      "6\n",
-      "1\n",
-      "6\n",
-      "2\n",
-      "6\n",
-      "3\n",
-      "6\n",
-      "4\n",
-      "6\n",
-      "5\n",
-      "6\n",
-      "6\n",
-      "6\n",
-      "7\n",
-      "[Timestamp('2020-03-01 00:00:00'), Timestamp('2020-03-02 00:00:00'), Timestamp('2020-03-03 00:00:00'), Timestamp('2020-03-04 00:00:00'), Timestamp('2020-03-05 00:00:00'), Timestamp('2020-03-06 00:00:00'), Timestamp('2020-03-07 00:00:00'), Timestamp('2020-03-08 00:00:00'), Timestamp('2020-03-09 00:00:00'), Timestamp('2020-03-10 00:00:00'), Timestamp('2020-03-11 00:00:00'), Timestamp('2020-03-12 00:00:00'), Timestamp('2020-03-13 00:00:00'), Timestamp('2020-03-14 00:00:00'), Timestamp('2020-03-15 00:00:00'), Timestamp('2020-03-16 00:00:00'), Timestamp('2020-03-17 00:00:00'), Timestamp('2020-03-18 00:00:00'), Timestamp('2020-03-19 00:00:00'), Timestamp('2020-03-20 00:00:00'), Timestamp('2020-03-21 00:00:00'), Timestamp('2020-03-22 00:00:00'), Timestamp('2020-03-23 00:00:00'), Timestamp('2020-03-24 00:00:00'), Timestamp('2020-03-25 00:00:00'), Timestamp('2020-03-26 00:00:00'), Timestamp('2020-03-27 00:00:00'), Timestamp('2020-03-28 00:00:00'), Timestamp('2020-03-29 00:00:00'), Timestamp('2020-03-30 00:00:00'), Timestamp('2020-03-31 00:00:00'), Timestamp('2020-04-01 00:00:00'), Timestamp('2020-04-02 00:00:00'), Timestamp('2020-04-03 00:00:00'), Timestamp('2020-04-04 00:00:00'), Timestamp('2020-04-05 00:00:00'), Timestamp('2020-04-06 00:00:00'), Timestamp('2020-04-07 00:00:00'), Timestamp('2020-04-08 00:00:00'), Timestamp('2020-04-09 00:00:00'), Timestamp('2020-04-10 00:00:00'), Timestamp('2020-04-11 00:00:00'), Timestamp('2020-04-12 00:00:00'), Timestamp('2020-04-13 00:00:00'), Timestamp('2020-04-14 00:00:00'), Timestamp('2020-04-15 00:00:00'), Timestamp('2020-04-16 00:00:00'), Timestamp('2020-04-17 00:00:00'), Timestamp('2020-04-18 00:00:00'), Timestamp('2020-04-19 00:00:00'), Timestamp('2020-04-20 00:00:00'), Timestamp('2020-04-21 00:00:00'), datetime.datetime(2020, 4, 22, 0, 0), datetime.datetime(2020, 4, 23, 0, 0), datetime.datetime(2020, 4, 24, 0, 0), datetime.datetime(2020, 4, 25, 0, 0), datetime.datetime(2020, 4, 26, 0, 0), datetime.datetime(2020, 4, 27, 0, 0), datetime.datetime(2020, 4, 28, 0, 0), datetime.datetime(2020, 4, 29, 0, 0), datetime.datetime(2020, 4, 30, 0, 0), datetime.datetime(2020, 5, 1, 0, 0), datetime.datetime(2020, 5, 2, 0, 0), datetime.datetime(2020, 5, 3, 0, 0), datetime.datetime(2020, 5, 4, 0, 0), datetime.datetime(2020, 5, 5, 0, 0), datetime.datetime(2020, 5, 6, 0, 0), datetime.datetime(2020, 5, 7, 0, 0), datetime.datetime(2020, 5, 8, 0, 0), datetime.datetime(2020, 5, 9, 0, 0), datetime.datetime(2020, 5, 10, 0, 0), datetime.datetime(2020, 5, 11, 0, 0), datetime.datetime(2020, 5, 12, 0, 0), datetime.datetime(2020, 5, 13, 0, 0), datetime.datetime(2020, 5, 14, 0, 0), datetime.datetime(2020, 5, 15, 0, 0), datetime.datetime(2020, 5, 16, 0, 0), datetime.datetime(2020, 5, 17, 0, 0), datetime.datetime(2020, 5, 18, 0, 0), datetime.datetime(2020, 5, 19, 0, 0), datetime.datetime(2020, 5, 20, 0, 0), datetime.datetime(2020, 5, 21, 0, 0), datetime.datetime(2020, 5, 22, 0, 0), datetime.datetime(2020, 5, 23, 0, 0), datetime.datetime(2020, 5, 24, 0, 0), datetime.datetime(2020, 5, 25, 0, 0), datetime.datetime(2020, 5, 26, 0, 0), datetime.datetime(2020, 5, 27, 0, 0), datetime.datetime(2020, 5, 28, 0, 0), datetime.datetime(2020, 5, 29, 0, 0), datetime.datetime(2020, 5, 30, 0, 0), datetime.datetime(2020, 5, 31, 0, 0), datetime.datetime(2020, 6, 1, 0, 0), datetime.datetime(2020, 6, 2, 0, 0), datetime.datetime(2020, 6, 3, 0, 0), datetime.datetime(2020, 6, 4, 0, 0), datetime.datetime(2020, 6, 5, 0, 0), datetime.datetime(2020, 6, 6, 0, 0), datetime.datetime(2020, 6, 7, 0, 0), datetime.datetime(2020, 6, 8, 0, 0)]\n",
-      "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]]\n",
-      "[['2020-03-01-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-02-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-03-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-04-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-05-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-06-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-07-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-08-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-09-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-10-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-11-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-12-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-13-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-14-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-15-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-16-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-17-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-18-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-19-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-20-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-21-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-22-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-23-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-24-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-25-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-26-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-27-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-28-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-29-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-30-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-03-31-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-01-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-02-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-03-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-04-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-05-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-06-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-07-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-08-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-09-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-10-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-11-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-12-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-13-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-14-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-15-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-16-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-17-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-18-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-19-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-20-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-21-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-22-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-23-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-24-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-25-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-26-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-27-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-28-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-29-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-30-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-01-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-02-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-03-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-04-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-05-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-06-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-07-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-08-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-09-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-10-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-11-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-12-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-13-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-14-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-15-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-16-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-17-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-18-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-19-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-20-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-21-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-22-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-23-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-24-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-25-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-26-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-27-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-28-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-29-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-30-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-31-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-01-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-02-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-03-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-04-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-05-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-06-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-07-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-08-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9]]\n"
+      "[['2020-04-01-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-02-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-03-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-04-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-05-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-06-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-07-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-08-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-09-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-10-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-11-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-12-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-13-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-14-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-15-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-16-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-17-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-18-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-19-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-20-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-21-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-22-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-23-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-24-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-25-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-26-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-27-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-28-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-29-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-04-30-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-01-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-02-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-03-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-04-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-05-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-06-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-07-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-08-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-09-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-10-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-11-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-12-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-13-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-14-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-15-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-16-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-17-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-18-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-19-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-20-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-21-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-22-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-23-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-24-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-25-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-26-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-27-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-28-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-29-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-30-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-05-31-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-01-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-02-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-03-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-04-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-05-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-06-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-07-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], ['2020-06-08-36061', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9]]\n"
      ]
     }
    ],
